# widmedia

./: README.md
pico/: notes.md  workspace.code-workspace
pico/helperFunctions/: .gitignore  animation_coordinates.txt  convertImage.py
pico/nachtlampe/: notes.md
pico/widaktiv/: CMakeLists.txt  copyUf2file.bat  prepareNmake.py  widaktiv.uf2  widaktivHeadless.uf2
pico/widaktiv/libraries/: CMakeLists.txt
pico/widaktiv/libraries/pico_display/: pico_display.cpp  pico_display.hpp
pico/widaktiv/libraries/pico_graphics/: pico_graphics.cpp  pico_graphics.hpp
pico/widaktiv/usb/: CMakeLists.txt  imgdata.hpp  usb_descriptors.cpp  widaktiv.cpp
schwimmmesser/: .gitignore  ProjectNotes.md  README.md
schwimmmesser/_div/: get_last_10_appCompiles.bat
smallProjects/csharp/: howto.txt  standalone.cs
smallProjects/esp32/: notes.md
smallProjects/pdfgen/: trial.php
smallProjects/pyqt5Trial/: two_buttons.py
smallProjects/qtTrial/: pyside2onRasp.txt  two_buttons.py
start/: README.md
strommesser/: .gitattributes  .gitignore  README.md  notes.md
strommesser.ch/: robots.txt  sitemap.xml  wp_login.fragment.html
strommesser.ch/pages/: contact.php  json.php
strommesser.ch/verbrauch/: .gitignore  functions.php  index.php  login.php  logout.php  now.php  pico2w_v5.php  settings.php  static.index.1.html  static.index.30.html  static.index.365.html  static.index.7.html  static.login.html  static.logout.html  static.now.html  static.settings.html  static.statistic.html  status.php  (+5 more)
tagesjournal/: .gitignore  Prompt.md
widmedia.ch/: .gitignore  index.html  robots.txt
(+141 files in other folders)
